[gd_scene load_steps=5 format=3 uid="uid://0iy482q4dmyn"]

[ext_resource type="Script" path="res://scene/world/mobs/criminal/criminal.gd" id="1_517qe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_um13u"]
size = Vector2(40, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqds8"]
size = Vector2(42, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_280po"]
radius = 227.554

[node name="criminal" type="CharacterBody2D"]
script = ExtResource("1_517qe")

[node name="Panel" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0.2, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 30)
shape = SubResource("RectangleShape2D_um13u")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(20, 30)
shape = SubResource("RectangleShape2D_vqds8")

[node name="viewing_distance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="viewing_distance"]
position = Vector2(20, 30)
shape = SubResource("CircleShape2D_280po")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -14.0
offset_top = -30.0
offset_right = 52.0
offset_bottom = -3.0
max_value = 3.0
value = 3.0
show_percentage = false

[node name="hold" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = -11.0
offset_top = -58.0
offset_right = 52.0
offset_bottom = -32.0
text = "criminal"

[node name="refresh" type="Timer" parent="."]

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="viewing_distance" to="." method="_on_viewing_distance_body_entered"]
[connection signal="body_exited" from="viewing_distance" to="." method="_on_viewing_distance_body_exited"]
[connection signal="timeout" from="hold" to="." method="_on_hold_timeout"]
[connection signal="timeout" from="refresh" to="." method="_on_refresh_timeout"]
